agregue la grilla de pokemones a la pagina index

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 .Slider {
     height: 400px;
 }
+.colorVerde{
+    background-color: #9DCE5A;
+}
+.colorVioleta{
+    background-color: #CEA7DA;
+}
+.colorNaranja{
+    background-color: #FD7D24;
+}
