--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,49 @@
 .colorNaranja{
     background-color: #FD7D24;
 }
+
+.marginmain {
+    margin-top: 200px;
+}
+
+li {
+    list-style-type: none;
+}
+
+.fsButton {
+    font-size: 10px;
+    border-radius: 30px;
+    width: 50px;
+    height: 13px;
+}
+
+.txtbutton {
+    position: relative;
+    bottom: 7px;
+    right: 3px;
+    
+}
+
+.leftbutton {
+
+    background-color: rgb(96, 155, 96);
+    color: white;
+    
+}
+
+.rigthbutton {
+    background-color: rgb(221, 140, 153);
+    color: white;
+    
+}
+
+@media all and (max-width: 900px) { 
+
+.Columnbulbasmall {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+    
+} 
