hice cambios en la descripcion del bulbasaur

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,9 @@
 .colorNaranja{
     background-color: #FD7D24;
 }
-
+.colorRosa{
+    background-color: #F366B9
+}
 .marginmain {
     margin-top: 200px;
 }
